tests/invalid_programs/function2.jas
// Expect '(' after function name.

fn test -> i32 { return 42; }
